refactoring, improve score to 92